# banco_com_schemas

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml  secrets.json
src/: api.py  banco_de_dados.py  constantes.py  executores.py  models.py  repositorios.py  schemas.py  seguranca.py
